--- a/Parts/Container1/container_content.css
+++ b/Parts/Container1/container_content.css
@@ -87,7 +87,7 @@ body {
     }
 
     .container1_space1, .container1_space2 {
-        background: rgba(255, 0, 0, 0.238);
+        background: rgba(206, 0, 0, 0.238);
         height: 100%;
         width: 10%;
 
@@ -252,7 +252,7 @@ body {
     }
 
     .container1_space1, .container1_space2 {
-        background: rgba(255, 0, 0, 0.238);
+        background: rgba(55, 255, 0, 0.238);
         height: 100%;
         width: 10%;
 
